--- a/index.html
+++ b/index.html
@@ -1,7 +1,36 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>Video Background Tubular</title>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>
+<script type="text/javascript" charset="utf-8" src="jquery.tubular.1.0.js"></script>
+<style>
+* {
+color: #fff;
+}
+
+body {
+margin: 0;
+}
+
+#main {
+padding: 50px;
+}
+</style>
+
+<script>
+$().ready(function() {
+$('#wrapper').tubular({videoId: 'cdx-644eIDY'});
+});
+</script>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<div id="wrapper">
+<div id="main">
+<h1>Заголовок</h1>
+<p>Некоторый текст.</p>
+<p><a href=" http://codemake.ru/kak-postavit-video-na-fon-sajta/">Как поставить видео на фон сайта</a></p>
+</div>
+</div>
 </body>
 </html>
