--- a/index.html
+++ b/index.html
@@ -1,36 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Video Background Tubular</title>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>
-<script type="text/javascript" charset="utf-8" src="jquery.tubular.1.0.js"></script>
-<style>
-* {
-color: #fff;
-}
-
-body {
-margin: 0;
-}
-
-#main {
-padding: 50px;
-}
-</style>
-
-<script>
-$().ready(function() {
-$('#wrapper').tubular({videoId: 'cdx-644eIDY'});
-});
-</script>
+  <title>Example : jQuery - Background Video</title>
+  <meta charset="UTF-8" />
+  <style type="text/css" media="screen">
+    * { margin:0px;padding:0px; }
+    html, body {
+      background:#000;
+      font-family:sans-serif;
+    }
+  </style>
 </head>
 <body>
-<div id="wrapper">
-<div id="main">
-<h1>Заголовок</h1>
-<p>Некоторый текст.</p>
-<p><a href=" http://codemake.ru/kak-postavit-video-na-fon-sajta/">Как поставить видео на фон сайта</a></p>
-</div>
-</div>
+
+  <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+  <script src="../jquery.backgroundvideo.min.js"></script>
+  <script>
+    $(document).ready(function() {
+      var videobackground = new $.backgroundVideo($('body'), {
+        "align": "centerXY",
+        "width": 1280,
+        "height": 720,
+        "path": "waves/",
+        "filename": "cloud",
+        "types": ["mp4","ogg","webm"]
+      });
+    });
+  </script>
 </body>
 </html>
