--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         "align": "centerXY",
         "width": 1280,
         "height": 720,
-        "path": "waves/",
-        "filename": "cloud",
+        "path": "media/",
+        "filename": "waves",
         "types": ["mp4","ogg","webm"]
       });
     });
