--- a/index.html
+++ b/index.html
@@ -9,23 +9,40 @@
       background:#000;
       font-family:sans-serif;
     }
+	video {
+    margin: 0;
+    padding: 0;
+}
+
+.video {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    z-index: 1;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
   </style>
 </head>
 <body>
 
-  <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-  <script src="jquery.backgroundvideo.min.js"></script>
-  <script>
-    $(document).ready(function() {
-      var videobackground = new $.backgroundVideo($('body'), {
-        "align": "centerXY",
-        "width": 1280,
-        "height": 720,
-        "path": "media/",
-        "filename": "waves",
-        "types": ["mp4","ogg","webm"]
-      });
-    });
-  </script>
+ <video id="my-video" class="video" muted loop>
+    <source src="media/waves.mp4" type="video/mp4">
+</video>
+
 </body>
+
+<script>
+    (function () {
+        var video = document.getElementById("my-video");
+        video.addEventListener("canplay", function () {
+            video.play();
+        });
+    })();
+</script>
 </html>
