--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
 
  <video id="my-video" class="video" muted loop>
-    <source src="media/waves.mp4" type="video/mp4">
+    <source src="media/Cloud.mp4" type="video/mp4">
 </video>
 
 </body>
