--- a/index.html
+++ b/index.html
@@ -1,38 +1,80 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Example : jQuery - Background Video</title>
+
   <meta charset="UTF-8" />
-  <style type="text/css" media="screen">
-    * { margin:0px;padding:0px; }
-    html, body {
-      background:#000;
-      font-family:sans-serif;
-    }
-	video {
-    margin: 0;
-    padding: 0;
-}
 
-.video {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    z-index: 1;
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-}
-  </style>
+  <title>Andrey Tuzhik</title>
+
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+
+  <link href="css/style.min.css" rel="stylesheet">
+
+  <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+
+    <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+
 </head>
-<body>
 
- <video id="my-video" class="video" muted loop>
+<body class="intro">
+
+<div class="intro-body">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-10 col-md-offset-1">
+                <h1 class="brand-heading">ANDREY TUZHIK</h1>
+                <ul class="list-inline banner-social-buttons">
+                    <li class="list-inline-item">
+                        <a href="https://vk.com/id_53425" target="_blank" class="btn btn-default btn-lg">
+                            <i class="fa fa-vk fa-2x fa-fw" aria-hidden="true"></i>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="https://www.facebook.com/atuzhik" target="_blank" class="btn btn-default btn-lg">
+                            <i class="fa fa-facebook fa-2x fa-fw" aria-hidden="true"></i>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="https://www.instagram.com/andrey_tuzhik" target="_blank" class="btn btn-default btn-lg">
+                            <i class="fa fa-instagram fa-2x fa-fw" aria-hidden="true"></i>
+                        </a>
+                    </li>
+                    <li  class="list-inline-item">
+                        <a href="www.linkedin.com/in/andrey-tuzhik" target="_blank" class="btn btn-default btn-lg">
+                            <i class="fa fa-linkedin-square fa-2x fa-fw" aria-hidden="true"></i>
+                        </a>
+                    </li>
+                    <li  class="list-inline-item">
+                        <a href="https://github.com/andreytuzhik" target="_blank" class="btn btn-default btn-lg">
+                            <i class="fa fa-github fa-2x fa-fw" aria-hidden="true"></i>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="skype:andreytuzhik?add" class="btn btn-default btn-lg">
+                            <i class="fa fa-skype fa-2x fa-fw" aria-hidden="true"></i>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="skype:+375291380706?call" class="btn btn-default btn-lg">
+                            <i class="fa fa-phone fa-2x fa-fw" aria-hidden="true"></i>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="mailto:andraguitar@mail.ru" target="_blank"
+                           class="btn btn-default btn-lg">
+                            <i class="fa fa-envelope-o fa-2x fa-fw" aria-hidden="true"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+
+<video id="my-video" class="video" muted loop>
     <source src="media/Cloud.mp4" type="video/mp4">
+    <source src="media/Cloud.ogg" type="video/ogg">
+    <source src="media/Cloud.webm" type="video/webm">
 </video>
 
 </body>
@@ -45,4 +87,5 @@
         });
     })();
 </script>
+
 </html>
