Fix linkedIn url

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         </a>
                     </li>
                     <li  class="list-inline-item">
-                        <a href="www.linkedin.com/in/andrey-tuzhik" target="_blank" class="btn btn-default btn-lg">
+                        <a href="https://www.linkedin.com/in/andrey-tuzhik" target="_blank" class="btn btn-default btn-lg">
                             <i class="fa fa-linkedin-square fa-2x fa-fw" aria-hidden="true"></i>
                         </a>
                     </li>
